# dahl

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  cnn-impl.md  design-choices.md  diff.py  flake.nix  readme.md  shell.nix  sources.md  starpu.nix  starpu_matrix_set.patch  todo.md  vector_pick_y.patch
dahl/: CMakeLists.txt  code_conventions.md  diff.py  readme.md
dahl/.sandbox/: CMakeLists.txt
dahl/.sandbox/src/: cpu.h  kernel.cu
dahl/datasets/: download_big_fashion.bash  download_cifar_10.bash  download_fashion_mnist.bash  preprocessing-big-fashion.py
dahl/examples/: basic_cnn.c  fashion_mnist.c
dahl/include/: dahl.h  dahl_arena.h  dahl_asserts.h  dahl_data.h  dahl_dataset.h  dahl_dense.h  dahl_layers.h  dahl_tasks.h  dahl_types.h  dahl_utils.h
dahl/sandbox/: readme.md
dahl/sandbox/src/: main.c
dahl/src/: asserts.c  dahl.c  macros.h  misc.c  misc.h  types.c
dahl/src/arena/: arena.c  arena.h  arena_tsoding.h
dahl/src/data_structures/: block.c  custom_filters.h  data_structures.h  matrix.c  partition.c  scalar.c  tensor.c  traits.c  vector.c
dahl/src/dataset/: big_fashion.c  factice.c
dahl/src/layers/: convolution.c  dense.c  pooling.c  relu.c
dahl/src/learning/: utils.c
dahl/src/tasks/: codelets.c  codelets.h  macros.h  tasks.c
dahl/src/tasks/cpu/: any.c  block.c  matrix.c  ml.c  scalar.c  tensor.c  vector.c
dahl/src/tasks/cuda/: any.cu  block.cu  common.cuh  matrix.cu  ml.cu  scalar.cu  tensor.cu  vector.cu
dahl/tests/: main.c  test_arena.c  test_data.c  test_layers.c  test_layers_data.h  test_miscellaneous.c  test_tasks.c
design-talk/: challenges.md  illustrating-graph-formalism.drawio
design-talk/schemas/: illustrating-graph-formalism.drawio
design-talk/topics/: any-type.md  clear-api-and-ownership.md  codelet-definition-with-macros.md  data-structure-wrappers.md  memory-managment.md  task-granularity.md  temporary-starpu-buffers.md  to-starpu-or-not-to-starpu.md  type-genericity.md
examples/: .$model-computation-graph.drawio.bkp  fashion-mnist-dp.c  fashion-mnist-mini-batch.c  fashion-mnist.c  fashion_mnist.c  model-computation-graph.drawio  utils.h
include/: dahl.h  dahl_arena.h  dahl_asserts.h  dahl_convolution.h  dahl_data.h  dahl_dataset.h  dahl_dense.h  dahl_mnist_loader.h  dahl_pooling.h  dahl_tasks.h  dahl_types.h
kernels/: scal.cu
nix/: fxt.nix  print.patch  reduction.patch  starpu.nix  vite.nix
nix/alumet/: alumet.nix  flake.nix
nix/starpu/: flake.nix  result  starpu.nix  using.md
nix/starpu/dependencies/: pajeng.nix
notes/design/schemas/: compute-graph-cluster-graph-partition.drawio
notes/design/topics/: any-type.md  data-structure-wrappers.md  hiding-acquire-release.md  memory-managment.md  regular-init-self.md  to-starpu-or-not-to-starpu.md  type-genericity.md
notes/experiments/dimensioning/: notes.md
notes/experiments/heterogeneity/: notes.md
notes/lab/2025-10-13/: 512x512x3-matrix-matrix-product.trace  512x512x3-parallelized-matrix-vector-products.trace  notes.md
notes/lab/2025-10-23/: notes.md  padded-O3.trace  padded.trace  padding-free-O3.trace  padding-free.trace
notes/lab/2025-11-14/: notes.md
notes/lab/2025-11-18/: 270x360x3-big-fashion.trace  notes.md  rammus-cpu-gpu-30-batch-size-big-fashion.trace  rammus-cpu-gpu-big-fashion.trace  rammus-cpu-only-big-fashion.trace  rammus-gpu-only-big-fashion.trace
notes/lab/2025-11-19/: almost-everything-cpu-only.trace  everything-parallelized.trace  notes.md  removing_partition_call_conv_and_relu.trace  removing_partition_call_conv_relu_pool_forward_and_backward.trace  with_partition_call.trace
notes/lab/2025-11-22/: notes.md
notes/lab/23-09-2025/: notes.md
notes/lab/24-09-2025/: notes.md
notes/lab/30-09-2025/: notes.md
python-version/: fashion-mnist.py  naive-version.py  pytorch-version.py  readme.md  shell.nix
rust-version/dahl/: Cargo.toml
rust-version/dahl/src/: main.rs
rust-version/dahl/src/layers/: convolution.rs  mod.rs
scripts/: plot.py
src/: arena.c  arena.h  asserts.c  codelets.c  codelets.h  convolution.c  convolution.h  cuda_usage_example.c  cuda_usage_example.h  dahl.c  data.c  data.h  misc.h  mnist_loader.c  pooling.c  pooling.h  tasks.c  tasks.h  types.c  types.h  utils.c  utils.h
src/arena/: _arena.h  arena.c  arena.h  arena_tsoding.h
src/data_structures/: any.c  block.c  custom_filters.h  data_structures.h  matrix.c  partition.c  scalar.c  tensor.c  traits.c  vector.c
src/dataset/: cifar_10.c  fashion_mnist.c
src/layers/: convolution.c  convolution.h  dense.c  dense.h  pooling.c  pooling.h
src/learning/: utils.c
src/tasks/: codelets.c  codelets.h  tasks.c
starpu-nix/: package.nix
test-zig/: build.zig  main.zig
tests/: layers_data.h  main.c  test_arena.c  test_convolution.c  test_data.c  test_layers.c  test_miscellaneous.c  test_tasks.c  test_types.c  tests.h
